# swarm-contrastive-decomposition

./: .gitignore  README.md  pyproject.toml
scd/: __init__.py  main.py  runner.py
scd/config/: structures.py
scd/models/: scd.py  timestamping.py
scd/processing/: postprocess.py  preprocess.py
scd/utils/: plotting.py
