[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scd"
version = "0.1.0"
description = "Swarm Contrastive Decomposition implementation"
authors = [{ name = "Agnese Grison", email = "agnese.grison16@imperial.ac.uk" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.23",
    "scipy>=1.10",
    "torch>=2.1",
]

[project.urls]
Homepage = "https://github.com/AgneGris/swarm-contrastive-decomposition"

[tool.setuptools.packages.find]
include = ["scd", "scd.*"]
